[gd_scene load_steps=3 format=3 uid="uid://1oy74758gv62"]

[ext_resource type="Script" uid="uid://dipqwl7jxxyc8" path="res://src/scripts/Panels/shop_pane.gd" id="1_ied34"]
[ext_resource type="Texture2D" uid="uid://dlfbvdcwk6dr2" path="res://icon.svg" id="2_nk2rg"]

[node name="ShopPane" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ied34")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.757123, 0.374746, 0.457367, 1)

[node name="CentralHubNavigation" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 19.0
offset_right = 121.0
offset_bottom = 50.0
text = "Central Hub"

[node name="ArmsDealerArt" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 328.0
offset_top = 14.0
offset_right = 625.0
offset_bottom = 233.0
texture = ExtResource("2_nk2rg")

[node name="DetailsPanel" type="Panel" parent="ColorRect"]
layout_mode = 0
offset_left = 329.0
offset_top = 240.0
offset_right = 618.0
offset_bottom = 351.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/DetailsPanel"]
layout_mode = 0
offset_left = 7.0
offset_top = 22.0
offset_right = 282.0
offset_bottom = 106.0
theme_override_font_sizes/normal_font_size = 12
text = "This is the pane that will populate when player clicks on mecha part."

[node name="Label" type="Label" parent="ColorRect/DetailsPanel"]
layout_mode = 1
offset_left = 7.0
offset_top = 4.0
offset_right = 41.0
offset_bottom = 18.0
theme_override_font_sizes/font_size = 10
text = "Details"

[node name="Shop" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 62.0
offset_right = 309.0
offset_bottom = 348.0
color = Color(0.681205, 0.221813, 0.239773, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/Shop"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 282.0
offset_bottom = 24.0

[node name="HeadsButton" type="Button" parent="ColorRect/Shop/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Heads"

[node name="TorsosButton" type="Button" parent="ColorRect/Shop/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Torso"

[node name="ArmsButton" type="Button" parent="ColorRect/Shop/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Arms"

[node name="LegsButton" type="Button" parent="ColorRect/Shop/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Legs"

[node name="FireArmsButton" type="Button" parent="ColorRect/Shop/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Fire Arms"

[node name="SwordsButton" type="Button" parent="ColorRect/Shop/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Swords"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Shop"]
layout_mode = 0
offset_left = 11.0
offset_top = 36.0
offset_right = 279.0
offset_bottom = 249.0

[node name="FerriteBars" type="Label" parent="ColorRect/Shop"]
layout_mode = 0
offset_left = 10.0
offset_top = 222.0
offset_right = 76.0
offset_bottom = 238.0
theme_override_font_sizes/font_size = 11
text = "Ferrite Bars:"

[node name="FerriteBarsCount" type="Label" parent="ColorRect/Shop"]
layout_mode = 0
offset_left = 11.0
offset_top = 237.0
offset_right = 118.0
offset_bottom = 253.0
theme_override_font_sizes/font_size = 11
text = "15000000000000000"

[node name="Plasma" type="Label" parent="ColorRect/Shop"]
layout_mode = 0
offset_left = 10.0
offset_top = 252.0
offset_right = 52.0
offset_bottom = 268.0
theme_override_font_sizes/font_size = 11
text = "Plasma:"

[node name="PlasmaCount" type="Label" parent="ColorRect/Shop"]
layout_mode = 0
offset_left = 11.0
offset_top = 267.0
offset_right = 118.0
offset_bottom = 283.0
theme_override_font_sizes/font_size = 11
text = "15000000000000000"

[node name="Platinum" type="Label" parent="ColorRect/Shop"]
layout_mode = 0
offset_left = 149.0
offset_top = 250.0
offset_right = 215.0
offset_bottom = 266.0
theme_override_font_sizes/font_size = 11
text = "Platinum:"

[node name="PlatinumCount" type="Label" parent="ColorRect/Shop"]
layout_mode = 0
offset_left = 149.0
offset_top = 265.0
offset_right = 215.0
offset_bottom = 281.0
theme_override_font_sizes/font_size = 11
text = "150000000000000000000"

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 207.0
offset_top = 17.0
offset_right = 309.0
offset_bottom = 40.0
text = "Black Market"

[connection signal="button_up" from="ColorRect/CentralHubNavigation" to="." method="_on_central_hub_navigation_button_up"]
